<?xml: <?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Registro6">

    <TextView
        android:id="@+id/TituloPrincipal"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/tituloRegistro6"
        android:textColor="#bf592b"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuidelineRegisro6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardviewContenedor1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="30dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuidelineRegisro6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CV1constraint1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#dca15f">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/CV1CN1guidelineHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/CV1Cn1constraint1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/CV1CN1guidelineHorizontal">

                <TextView
                    android:id="@+id/CV1Cn1textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/R6pregunta1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="#AB1D1D"
                    app:layout_constraintTop_toBottomOf="@id/CV1Cn1textView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cardCornerRadius="50dp"
                    android:layout_margin="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#edbea4"
                        android:hint="@string/R6editText1"
                        android:inputType="text"
                        android:paddingStart="15dp"
                        android:textColorHint="#bf592b" />

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/CV1Cn1constraint2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/CV1Cn1constraint1">

                <TextView
                    android:id="@+id/CV1Cn2textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/R6pregunta2"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="#AB1D1D"
                    app:layout_constraintTop_toBottomOf="@id/CV1Cn2textView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:cardCornerRadius="50dp"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/ejemplo_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#edbea4"
                        android:hint="@string/R6editText2"
                        android:inputType="number"
                        android:textColorHint="#bf592b"
                        android:paddingStart="15dp" />

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/CV1CN1guidelineHorizontal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.8"/>

            <Button
                android:id="@+id/BotonSiguiente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#bc6b24"
                android:padding="16dp"
                android:text="Siguiente"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>